--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -4,3 +4,22 @@
   margin: 0 auto;
   margin-top: 4.972rem;
 }
+
+.infoContainer {
+  display: flex;
+  margin-top: 23px;
+
+  div {
+    display: flex;
+    align-items: center;
+    color: var(--info);
+
+    small {
+      margin-left: 8px;
+    }
+
+    & + div {
+      margin-left: 24px;
+    }
+  }
+}
