--- a/src/pages/home.module.scss
+++ b/src/pages/home.module.scss
@@ -16,6 +16,11 @@
   margin-top: 4.051rem;
   display: block;
 
+  a + a {
+    display: block;
+    margin-top: 48px;
+  }
+
   strong {
     font-size: 1.75rem;
     font-weight: 700;
