--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,9 +1,10 @@
+//meu
+
 .banner {
   img {
     height: 25rem;
     width: 100%;
-    background-size: cover;
-    background-position: center;
+    object-fit: cover;
   }
 }
 
@@ -20,6 +21,10 @@
 
     h2 {
       font-size: 2rem;
+
+      &:not(:first-child) {
+        margin-top: 2rem;
+      }
     }
 
     div {
@@ -28,7 +33,7 @@
       text-align: justify;
 
       p ~ p {
-        margin-top: 1rem;
+        margin-top: 1.5rem;
       }
 
       ul {
@@ -40,12 +45,12 @@
       }
 
       a {
-        color: var(--highlight);
+        color: #ff57b2;
         text-decoration: underline transparent;
         transition: 0.2s;
 
         &:hover {
-          text-decoration: underline var(--highlight);
+          text-decoration: underline #ff57b2;
         }
       }
     }
