--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -23,3 +23,19 @@
     }
   }
 }
+
+.preview {
+  display: block;
+  text-align: center;
+  width: 100%;
+  max-width: 1130px;
+  margin: 0 auto;
+  margin-bottom: 6.625rem;
+  margin-top: 5.5rem;
+  background: var(--white);
+  color: var(--background);
+  border-radius: 4px;
+  padding: 1rem;
+  font-weight: 600;
+  font-size: 1.125rem;
+}
